# tasecureapi

reference/: CMakeLists.txt
reference/cmake/: ClangFormat.cmake
reference/src/: CMakeLists.txt
reference/src/client/: CMakeLists.txt
reference/src/clientimpl/: CMakeLists.txt
reference/src/taimpl/: CMakeLists.txt
reference/src/util/: CMakeLists.txt
